# spacy_polyglot

./: README.md  pyproject.toml  setup_polyglot.sh
src/spacy_polyglot/: __init__ copy.py  __init__.py
