[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spacy_polyglot"
version = "0.0.1"
description = "A pipeline for spaCy using polyglot. It is not recommended for uses besides validation."
authors = [
  {name = "Kenneth Enevoldsen", email = "kennethcenevoldsen@gmail.com"}, 
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

keywords = [
    "nlp",
    "danish",
    "spacy-universe",
]
requires-python = ">=3.8"
dependencies = [
    "Morfessor==2.0.6",
    "spacy>=3.4.4",
    "pycld2==0.41",
    "polyglot>=16.7.4",
    "pyicu>=2.11"
]


[project.license]
file = "LICENSE"
name = "MIT"
[project.optional-dependencies]
dev = [
  "ruff>=0.0.261",
  "black[jupyter]>=23.3.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"


[tool.setuptools.package-data]
"*" = ["*.csv"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "C4",
  "COM",
  "D417",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "NPY001",
  "PD002",
  "PIE",
  "PLE",
  "PLW",
  "PT",
  "UP",
  "Q",
  "PTH",
  "RSE",
  "RET",
  "RUF",
  "SIM",
  "W"
]
ignore = [
  "ANN101",
  "ANN401",
  "E402",
  "E501",
  "F401",
  "F841",
  "RET504",
  "ANN202",
]
ignore-init-module-imports = true
# Allow autofix for all enabled rules (when `--fix`) is provided.
unfixable = ["ERA"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "__init__.py",
  ".venv",
  ".env",
  ".git",
  "__pycache__",
  "dev/**",
  "training/v0.0.0/**",
  "training/v0.1.0/**",
  "training/v0.1.1/**",
  "training/v0.2.0/**",
  "training/ner_fine_grained/**",
  "papers/DaCy-A-Unified-Framework-for-Danish-NLP/**"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py38"

[tool.ruff.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.setuptools]
include-package-data = true
